# holgen

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README2.md
examples/: CMakeLists.txt  ExampleErrorConfig.h  generate.sh
examples/1/lua_gen/: Armor.lua  Character.lua
examples/1/output/: CMakeLists.txt  holgen.h
examples/1/schemas/: character.hsc
examples/2/lua_gen/: Armor.lua  Character.lua  Weapon.lua
examples/2/output/: CMakeLists.txt  holgen.h
examples/2/schemas/: character.hsc
examples/3/lua_gen/: Character.lua  Race.lua  WeaponInInventory.lua  WeaponType.lua  WeaponTypeBow.lua  WeaponTypeSword.lua
examples/3/output/: CMakeLists.txt  holgen.h
examples/3/schemas/: character.hsc
examples/4/lua_gen/: Armor.lua  Character.lua  CharacterArmor.lua  DataManager.lua  Weapon.lua
examples/4/output/: CMakeLists.txt  holgen.h
examples/4/schemas/: dataManager.hsc
examples/data/4/: armors.json  characters.json  weapons.json
examples/usage/: CMakeLists.txt  LuaContext.cpp  LuaContext.h  example1.cpp  example2.cpp  example3.cpp  example4.cpp  main.cpp
libs/: notes  (+2 more)
libs/generator/: CMakeLists.txt  CodeBlock.cpp  CodeBlock.h  CodeGenerator.cpp  CodeGenerator.h  Decorators.h  FileType.h  Generator.cpp  Generator.h  GeneratorJson.cpp  GeneratorJson.h  GeneratorLua.cpp  GeneratorLua.h  GeneratorSettings.h  HeaderContainer.cpp  HeaderContainer.h  Naming.cpp  Naming.h  NamingConvention.cpp  NamingConvention.h  StringSwitcher.cpp  StringSwitcher.h  TranslatedProject.cpp  TranslatedProject.h  Translator.cpp  Translator.h  TranslatorSettings.h  TypeInfo.cpp  TypeInfo.h  UserDefinedSectionExtractor.cpp  UserDefinedSectionExtractor.h  Validator.cpp  Validator.h
libs/generator/generators/: CMakeGenerator.cpp  CMakeGenerator.h  CPPModifiableSourceGenerator.cpp  CPPModifiableSourceGenerator.h  CSharpEnumGenerator.cpp  CSharpEnumGenerator.h  CSharpGeneratorBase.cpp  CSharpGeneratorBase.h  CSharpHolgenMainGenerator.cpp  CSharpHolgenMainGenerator.h  CSharpModuleInterfaceGenerator.cpp  CSharpModuleInterfaceGenerator.h  CSharpProjectGenerator.cpp  CSharpProjectGenerator.h  CSharpSourceGenerator.cpp  CSharpSourceGenerator.h  CSharpWrapperGenerator.cpp  CSharpWrapperGenerator.h  CppHeaderGenerator.cpp  CppHeaderGenerator.h  CppModifiableSourceGenerator.cpp  CppModifiableSourceGenerator.h  CppSourceGenerator.cpp  CppSourceGenerator.h  Generator.cpp  Generator.h  GeneratorFilesystemHelper.cpp  GeneratorFilesystemHelper.h  GeneratorGlobalPointer.cpp  GeneratorGlobalPointer.h  GeneratorJson.cpp  GeneratorJson.h  GeneratorLua.cpp  GeneratorLua.h  HolgenHeaderGenerator.cpp  HolgenHeaderGenerator.h  LuaGeneratorBase.cpp  LuaGeneratorBase.h  LuaPublisherGenerator.cpp  LuaPublisherGenerator.h  (+2 more)
libs/generator/lang/: BridgingHelper.cpp  BridgingHelper.h  CSharpHelper.cpp  CSharpHelper.h
libs/generator/plugins/: CWrappersPlugin.cpp  CWrappersPlugin.h  ClassCopyMoveDestroyPlugin.cpp  ClassCopyMoveDestroyPlugin.h  ClassEqualsOperatorPlugin.cpp  ClassEqualsOperatorPlugin.h  ClassFieldGetterPlugin.cpp  ClassFieldGetterPlugin.h  ClassFieldPlugin.cpp  ClassFieldPlugin.h  ClassFieldSetterPlugin.cpp  ClassFieldSetterPlugin.h  ClassFieldVariantPlugin.cpp  ClassFieldVariantPlugin.h  ClassIdFieldPlugin.cpp  ClassIdFieldPlugin.h  ClassMetadataPlugin.cpp  ClassMetadataPlugin.h  ClassNonCopyablePlugin.cpp  ClassNonCopyablePlugin.h  ClassPlugin.cpp  ClassPlugin.h  ClassRuleOfFivePlugin.cpp  ClassRuleOfFivePlugin.h  ContainerFieldPlugin.cpp  ContainerFieldPlugin.h  CppDestructorPlugin.cpp  CppDestructorPlugin.h  CppFunctionPlugin.cpp  CppFunctionPlugin.h  EnumPlugin.cpp  EnumPlugin.h  FunctionPluginBase.cpp  FunctionPluginBase.h  ManagedClassPlugin.cpp  ManagedClassPlugin.h  TranslatorPlugin.cpp  TranslatorPlugin.h
libs/generator/translator_plugins/: ClassFieldGetterPlugin.cpp  ClassFieldGetterPlugin.h  ClassFieldPlugin.cpp  ClassFieldPlugin.h  ClassFieldSetterPlugin.cpp  ClassFieldSetterPlugin.h  ClassPlugin.cpp  ClassPlugin.h  ContainerFieldPlugin.cpp  ContainerFieldPlugin.h  CppFunctionPlugin.cpp  EnumPlugin.cpp  EnumPlugin.h  FilesystemHelperPlugin.cpp  FilesystemHelperPlugin.h  GeneratorFilesystemHelper.cpp  GeneratorFilesystemHelper.h  GeneratorGlobalPointer.cpp  GeneratorGlobalPointer.h  GeneratorJson.cpp  GeneratorJson.h  GeneratorLua.cpp  GeneratorLua.h  GlobalPointerPlugin.cpp  GlobalPointerPlugin.h  JsonConverterPlugin.cpp  JsonConverterPlugin.h  JsonHelperPlugin.cpp  JsonHelperPlugin.h  JsonParseFilesPlugin.cpp  JsonParseFilesPlugin.h  JsonPlugin.cpp  JsonPlugin.h  LuaFunctionPlugin.cpp  LuaFunctionPlugin.h  LuaHelperPlugin.cpp  LuaHelperPlugin.h  LuaPlugin.cpp  LuaPlugin.h  ManagedClassPlugin.cpp  (+3 more)
libs/generator/types/: CSharpTypes.cpp  CSharpTypes.h  Common.h  CppTypes.cpp  CppTypes.h
libs/generator/utils/: BridgingHelper.cpp  BridgingHelper.h  CSharpHelper.cpp  CSharpHelper.h  CSharpMethodHelper.cpp  CSharpMethodHelper.h  CompositeIdHelper.cpp  CompositeIdHelper.h  HeaderContainer.cpp  NamingConvention.cpp  NamingConvention.h  (+2 more)
tests/: CMakeLists.txt  Helpers.cpp  Helpers.h  UserDefinedSectionExtractorTest.cpp  test_dependency_graph.cpp  test_generator.cpp  test_generator_global_pointer.cpp  test_parser.cpp  test_tokenizer.cpp  test_translator.cpp  test_validator.cpp
tests/blackbox/: CMakeLists.txt  config.h  x_googletest  x_rapidjson
tests/blackbox_csharp/: CMakeLists.txt  x_lua
tests/blackbox_swig/: CMakeLists.txt  config.h
tests/plugins/: ClassEqualsOperatorPluginTest.cpp  ClassFieldGetterPluginTest.cpp  ClassFieldPluginTest.cpp  ClassFieldSetterPluginTest.cpp  ClassFieldVariantPluginTest.cpp  ClassIdFieldPluginTest.cpp  ClassPluginTest.cpp  ContainerFieldPluginTest.cpp  CppFunctionPluginTest.cpp  EnumPluginTest.cpp  JsonConverterPluginTest.cpp  JsonParseFilesPluginTest.cpp  JsonParsePluginTest.cpp  JsonPluginTest.cpp  LuaFunctionPluginTest.cpp  LuaPluginTest.cpp  ManagedClassPluginTest.cpp  TranslatorPluginTest.h
tests/test_data/: CMakeLists.txt
tests/translator_plugins/: ClassFieldPluginTest.cpp  ClassPluginTest.cpp  TranslatorPluginTest.h
(+397 files in other folders)
