add_library(holgen_blackbox_test_lib TestEnumStruct.cpp Race.cpp Person.cpp RaceId.cpp Country.cpp Boot.cpp Armor.cpp Character.cpp GameData.cpp DamageMultiplier.cpp Weapon.cpp Number.cpp Calculator.cpp Human.cpp HumanManager.cpp TestContainerInnerStructWithId.cpp TestContainerInnerStructNoId.cpp TestContainerVector.cpp TestContainerMap.cpp TestEnum.cpp JsonHelper.cpp Converter.cpp LuaHelper.cpp GlobalPointer.cpp FilesystemHelper.cpp)
